@@ -2,6 +2,10 @@ lintian (2.5.40) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/changes-file.pm:
+    + [JW] Use "~bpo7+N" as the suffix for wheezy-backports-sloppy
+      uploads.  Thanks to Vincent Bernat for the bug report.  (Closes:
+      #810028).
   * checks/cruft.pm:
     + [BR] Pass information about minified javascript down to tag.
       (Closes:  #804147).
